--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
       <% unless @product.empty? %>
       <%@product.each do |product|%>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(product.id), method: :get do %>
         <div class='item-img-content'>
           <%= image_tag product.image, class: "item-img" %>
 
