--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,8 +23,7 @@
       </span>
     </div>
 
-      <%unless @product.order %>
-      <%if user_signed_in?%>
+      <%unless user_signed_in? && @product.order.product_id == @product.id%>
         <%if current_user.id == @product.user.id %>
           <%= link_to "商品の編集", edit_item_path(@product.id), method: :get, class: "item-red-btn" %>
           <p class="or-text">or</p>
@@ -33,7 +32,6 @@
            <%= link_to "購入画面に進む", item_orders_path(@product.id), method: :get ,class:"item-red-btn"%>
         <%end%>
       <%end%>
-      <% end %>
 
     <div class="item-explain-box">
       <span><%= @product.explain %></span>
