--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,14 +134,11 @@
         <%= link_to item_path(product.id), method: :get do %>
         <div class='item-img-content'>
           <%= image_tag product.image, class: "item-img" %>
-          <%@order.each do |order|%>
-            <%if order.product_id == product.id %>
-              <div class='sold-out'>
-                <span>Sold Out!!</span>
-              </div>
-            <%end%>
+          <% if product.order %>
+            <div class='sold-out'>
+              <span>Sold Out!!</span>
+            </div>
           <%end%>
-
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
