--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,12 +23,12 @@
       </span>
     </div>
 
-      <%unless user_signed_in? && @product.order.product_id == @product.id%>
-        <%if current_user.id == @product.user.id %>
+      <%unless  @product.order.present?%>
+        <%if user_signed_in? && current_user.id == @product.user.id %>
           <%= link_to "商品の編集", edit_item_path(@product.id), method: :get, class: "item-red-btn" %>
           <p class="or-text">or</p>
           <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
-        <% else %>         
+        <% elsif user_signed_in? %>         
            <%= link_to "購入画面に進む", item_orders_path(@product.id), method: :get ,class:"item-red-btn"%>
         <%end%>
       <%end%>
